# dedpy

./: Makefile  Pipfile  README.md  _scratch.py  app.py  bus.py  dirlist.py  index.md  initializers.py  internals.py  main.py  modd.conf  panels.py  pid.py  pyproject.toml  theme.py
devlog/: 2020-12-12.md  2020-12-13.md  2020-12-16.md
