[tool.poetry]
name = "dedpy"
version = "0.1.0"
description = "A integrating text editor inspired by vim and acme"
authors = ["andrebq <andrebq@gmail.com>"]
license = "Mozilla Public License v2"

[tool.poetry.dependencies]
python = "^3.9"
wxPython = "^4.1.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
