[tool.poetry]
name = "dedpy"
version = "0.1.0"
description = "A integrating text editor inspired by vim and acme"
authors = ["andrebq <andrebq@gmail.com>"]
license = "Mozilla Public License v2"

[tool.poetry.dependencies]
python = "^3.9"
wxPython = "^4.1.1"
paho-mqtt = "^1.5.1"
pyrsistent = "^0.17.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pyinstaller = "^4.1"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
